--- a/BE/settings.json
+++ b/BE/settings.json
@@ -50,7 +50,10 @@
             "uuid": "0dfa1418-cab1-4439-ae8a-b0c971471c99",
             "enabled": true
         },
-        "mp_logic": null,
+        "mp_logic": {
+            "uuid": "e058193f-99b3-434c-be33-bb6222114c09",
+            "enabled": true
+        },
         "common_logic": null
     },
     "logics": {
